crates/swc_css_parser/tests/errors/percent/dot/output.stderr
error: Expected Declaration value
 --> $DIR/tests/errors/percent/dot/input.css:1:13
  |
1 | a { width: 0.%; }
  |             ^

error: Expected Declaration value
 --> $DIR/tests/errors/percent/dot/input.css:1:14
  |
1 | a { width: 0.%; }
  |              ^

